Fix search input size on mobile for the webapp

--- a/resources/sass/responsive/_sm.scss
+++ b/resources/sass/responsive/_sm.scss
@@ -43,9 +43,9 @@
 		border: none !important;
 	}
 
-	input[name="search"] {
-		font-size: 1.6em !important;
-	}
+	// input[name="search"] {
+	// 	font-size: 1.6em !important;
+	// }
 
 	.dataTables_length {
 		display: none !important;
